[package]
name = "dropdash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.5"
qrcode = "0.12"
image = "0.24"
humantime = "2.1"
serde_json = "1.0.141"
clipboard = "=0.5.0"
