[package]
name = "dropdashd"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
qrcode = "0.12"
local-ip-address = "0.5"
humantime = "2.1"
uuid = { version = "1", features = ["v4"] }
libmdns = "0.8"
mdns-sd = "0.6"
gethostname = "1.0.2"
serde_json = "1.0.141"
serde = "1.0.219"
